src/test/deca/syntax/invalid/personal/18_literaux.deca
// Description:
//    tests de non-terminal 'if then else': manque 'if' avant le 'else'.
//
// Resultats:
//    Ligne 10 : Erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2023

// Un exemple de programme Deca
{
    a=null;
}
